// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@no-llm brief render surfaces (drift detection) > --json envelope through the ask command 1`] = `
"{"schemaVersion":"0.2","kind":"brief","brief":{"brief_id":"01ARZ3NDEKTSV4RRFFQ69G5FAV","task_id":"01ARZ3NDEKTSV4RRFFQ69G5FAW","schema_version":"0.2","title":"Cheapest Sony WH-1000XM5 today","overview":"Lowest price is **$328** at Amazon (down from a $399 list price). All three tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this week. [1][3]","key_findings":[{"text":"Amazon — $328, in stock, free shipping [1]","citations":[1],"editorial":false,"facet":{"price":328,"currency":"USD","in_stock":true},"children":[{"text":"Amazon also shows the steepest list-price discount among tracked retailers","citations":[1]}]},{"text":"Best Buy — $349, in stock [2]","citations":[2],"editorial":false,"facet":{"price":349,"in_stock":true},"children":[]},{"text":"Walmart — $342 via a third-party seller [3]","citations":[3],"editorial":false,"facet":{"price":342,"in_stock":true},"children":[]},{"text":"Prices have trended upward since last week, so buying now is reasonable.","citations":[],"editorial":true,"facet":null,"children":[]}],"sections":[{"heading":"Price & availability","body_md":"All three major retailers currently stock the WH-1000XM5. Amazon has the lowest sticker at $328, down from a $399 list price, followed by Walmart at $342 and Best Buy at $349. [1][2][3]","citations":[1,2,3]},{"heading":"Caveats","body_md":"The Walmart listing is fulfilled by a third-party seller, so warranty terms differ from a first-party sale. [3]","citations":[3]}],"facets":{"comparison":{"columns":["Retailer","Price","In stock"],"rows":[["Amazon","$328",true],["Best Buy","$349",true],["Walmart","$342",true]]}},"sources":[{"n":1,"url":"https://www.amazon.com/sony-wh-1000xm5","final_url":null,"host":"amazon.com","title":"Sony WH-1000XM5 Wireless Headphones — Amazon","excerpt":"Industry-leading noise cancellation with two processors and eight microphones. List price $399, current price $328.","fetched_at":"2026-07-01T09:00:00.000Z","published_at":"2026-06-28T00:00:00.000Z"},{"n":2,"url":"https://www.bestbuy.com/sony-wh-1000xm5","final_url":null,"host":"bestbuy.com","title":"Sony WH-1000XM5 | Best Buy","excerpt":null,"fetched_at":"2026-07-01T09:00:05.000Z","published_at":null},{"n":3,"url":"https://www.walmart.com/ip/sony-wh-1000xm5","final_url":null,"host":"walmart.com","title":"Sony WH-1000XM5 Headphones - Walmart","excerpt":null,"fetched_at":"2026-07-01T09:00:10.000Z","published_at":null}],"metadata":{"search_provider":"tavily","synthesis":"deterministic","deterministic_fallback_used":false,"coverage":1,"freshness":"today","citation_verdict":{"claims_checked":6,"flagged":0,"stripped":0},"usage":null,"evidence":null,"run_id":"01ARZ3NDEKTSV4RRFFQ69G5FAX"},"notices":[{"source":"example-blog.com","reason":"fetch timed out after 8000ms","kind":"fetch_failed"}]},"artifacts":null}
"
`;

exports[`@no-llm brief render surfaces (drift detection) > brief.html artifact 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="referrer" content="no-referrer">
<title>Cheapest Sony WH-1000XM5 today</title>
<style>
/* ---------- tokens ---------- */
:root {
  color-scheme: light dark;
  --ui: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  --mono: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
  --bg: #f6f4ef;
  --surface: #fffdf8;
  --surface-alt: #f0ece3;
  --ink: #1c1b18;
  --ink-soft: #4d4a43;
  --ink-faint: #7d786c;
  --rule: #e2ddd1;
  --rule-strong: #cbc4b4;
  --accent: #1a5fb4;
  --accent-soft: #e7eefa;
  --warm: #b0541b;
  --ok: #1f7a4d;
  --warn: #8a6206;
  --warn-soft: #fbf1d6;
  --danger: #b3261e;
  --danger-soft: #fbe7e5;
  --radius: 8px;
  --shadow: 0 1px 2px rgba(28, 27, 24, 0.05), 0 10px 24px -18px rgba(28, 27, 24, 0.45);
}
@media (prefers-color-scheme: dark) {
  :root {
    --bg: #15161a;
    --surface: #1d1f25;
    --surface-alt: #24272f;
    --ink: #e9e7e2;
    --ink-soft: #b5b1a8;
    --ink-faint: #8a8579;
    --rule: #2f333c;
    --rule-strong: #464c58;
    --accent: #7fb2f0;
    --accent-soft: #1a2c42;
    --warm: #e59a63;
    --ok: #62c58c;
    --warn: #e0b95f;
    --warn-soft: #322a15;
    --danger: #f08a80;
    --danger-soft: #3a1e1c;
    --shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 10px 24px -18px rgba(0, 0, 0, 0.9);
  }
}

/* ---------- base ---------- */
* { box-sizing: border-box; }
html { scroll-behavior: smooth; }
body {
  margin: 0;
  padding: 2.5rem 1.25rem 4rem;
  font-family: Georgia, "Iowan Old Style", "Times New Roman", serif;
  font-size: 1.05rem;
  line-height: 1.65;
  color: var(--ink);
  background: var(--bg);
  -webkit-text-size-adjust: 100%;
}
body::before {
  content: "";
  position: fixed;
  inset: 0 0 auto 0;
  height: 3px;
  background: linear-gradient(90deg, var(--accent), var(--warm));
}
::selection { background: var(--accent-soft); color: var(--ink); }
:focus-visible { outline: 2px solid var(--accent); outline-offset: 2px; border-radius: 3px; }
.brief { max-width: 46rem; margin: 0 auto; }

/* ---------- typography ---------- */
h1 {
  font-size: clamp(1.75rem, 1.2rem + 2vw, 2.3rem);
  line-height: 1.15;
  letter-spacing: -0.01em;
  margin: 0 0 0.75rem;
}
h1::after {
  content: "";
  display: block;
  width: 3.5rem;
  height: 3px;
  margin-top: 0.7rem;
  border-radius: 2px;
  background: linear-gradient(90deg, var(--accent), var(--warm));
}
h2 {
  font-size: 1.35rem;
  margin: 2.25rem 0 0.6rem;
  padding-bottom: 0.3rem;
  border-bottom: 1px solid var(--rule);
}
h3 { font-size: 1.12rem; margin: 1.6rem 0 0.4rem; }
h4, h5, h6 {
  font-family: var(--ui);
  font-size: 0.9rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.06em;
  color: var(--ink-soft);
  margin: 1.5rem 0 0.35rem;
}
p { margin: 0 0 1rem; }
ul, ol { padding-left: 1.4rem; margin: 0 0 1rem; }
li { margin: 0.3rem 0; }
li::marker { color: var(--ink-faint); }
ul:has(> li > input[type="checkbox"]) { list-style: none; padding-left: 0.25rem; }
input[type="checkbox"] { accent-color: var(--accent); margin-right: 0.4rem; }
hr { border: 0; height: 1px; background: var(--rule); margin: 2rem 0; }
del { color: var(--ink-faint); }
mark { background: var(--warn-soft); color: var(--ink); padding: 0 0.15em; border-radius: 3px; }
a { color: var(--accent); text-decoration-thickness: 1px; text-underline-offset: 2px; }
a:hover { color: var(--warm); }
blockquote {
  margin: 1rem 0;
  padding: 0.5rem 1rem;
  border-left: 3px solid var(--rule-strong);
  border-radius: 0 var(--radius) var(--radius) 0;
  background: var(--surface-alt);
  color: var(--ink-soft);
}
blockquote p:first-child { margin-top: 0; }
blockquote p:last-child { margin-bottom: 0; }
code {
  font-family: var(--mono);
  font-size: 0.87em;
  background: var(--surface-alt);
  border: 1px solid var(--rule);
  border-radius: 4px;
  padding: 0.05em 0.35em;
}
pre {
  font-family: var(--mono);
  background: var(--surface-alt);
  border: 1px solid var(--rule);
  border-radius: var(--radius);
  padding: 0.9rem 1.1rem;
  margin: 0 0 1.1rem;
  line-height: 1.5;
  overflow-x: auto;
}
pre code { background: none; border: 0; padding: 0; font-size: 0.85em; }
.img-alt {
  font-family: var(--ui);
  font-size: 0.85em;
  color: var(--ink-faint);
  border: 1px dashed var(--rule-strong);
  border-radius: 4px;
  padding: 0.05em 0.4em;
}

/* ---------- overview ---------- */
.overview {
  background: var(--surface);
  border: 1px solid var(--rule);
  border-left: 4px solid var(--accent);
  border-radius: var(--radius);
  box-shadow: var(--shadow);
  padding: 1rem 1.35rem 1.05rem;
  margin: 1.25rem 0 1.75rem;
  font-size: 1.07rem;
}
.overview::before {
  content: "In short";
  display: block;
  font-family: var(--ui);
  font-size: 0.72rem;
  font-weight: 700;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  color: var(--warm);
  margin-bottom: 0.4rem;
}
.overview p:last-child { margin-bottom: 0; }

/* ---------- key findings ---------- */
ul.key-findings { list-style: none; padding-left: 0; }
ul.key-findings > li { position: relative; padding-left: 1.4rem; margin: 0.55rem 0; }
ul.key-findings > li::before {
  content: "";
  position: absolute;
  left: 0.2rem;
  top: 0.68em;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background: var(--accent);
}
ul.children {
  list-style: none;
  margin: 0.4rem 0 0;
  padding-left: 0.85rem;
  border-left: 2px solid var(--rule);
  color: var(--ink-soft);
  font-size: 0.95em;
}
ul.children li { margin: 0.2rem 0; padding-left: 0.5rem; }
em.editorial {
  font-family: var(--ui);
  font-style: normal;
  font-size: 0.72em;
  font-weight: 600;
  letter-spacing: 0.04em;
  text-transform: uppercase;
  color: var(--warm);
  background: var(--surface-alt);
  border: 1px solid var(--rule);
  border-radius: 999px;
  padding: 0.1em 0.5em;
  margin-left: 0.35em;
  white-space: nowrap;
}

/* ---------- citations ---------- */
sup.cite { font-size: 0.68em; line-height: 0; margin-left: 2px; }
sup.cite a, sup.cite span {
  text-decoration: none;
  border-radius: 4px;
  padding: 0.2em 0.35em;
  transition: background-color 120ms ease, color 120ms ease;
}
sup.cite a { color: var(--accent); background: var(--accent-soft); }
sup.cite a:hover { color: var(--surface); background: var(--accent); }
sup.cite span { color: var(--ink-faint); background: var(--surface-alt); cursor: help; }

/* ---------- tables ---------- */
.table-wrap { overflow-x: auto; margin: 0.75rem 0 1.25rem; }
.brief table {
  border-collapse: collapse;
  width: 100%;
  font-family: var(--ui);
  font-size: 0.92rem;
  background: var(--surface);
}
.brief th, .brief td {
  text-align: left;
  vertical-align: top;
  padding: 0.55rem 0.8rem;
  border-bottom: 1px solid var(--rule);
}
.brief td { font-variant-numeric: tabular-nums; }
.brief thead th {
  background: var(--surface-alt);
  color: var(--ink-soft);
  font-size: 0.78rem;
  font-weight: 600;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  white-space: nowrap;
  border-bottom: 2px solid var(--rule-strong);
}
.brief tbody tr { transition: background-color 120ms ease; }
.brief tbody tr:nth-child(even) { background: var(--surface-alt); }
.brief tbody tr:hover { background: var(--accent-soft); }
.brief tbody tr:last-child td { border-bottom: 0; }
.brief td .yes { color: var(--ok); font-weight: 700; }
.brief td .no { color: var(--danger); }
.brief td .nil { color: var(--ink-faint); }

/* ---------- sources ---------- */
ol.sources { padding-left: 1.7rem; }
ol.sources li {
  margin: 0.6rem 0;
  padding: 0.15rem 0.3rem;
  border-radius: 4px;
  scroll-margin-top: 2rem;
  transition: background-color 200ms ease;
}
ol.sources li::marker {
  font-family: var(--ui);
  font-size: 0.85em;
  font-variant-numeric: tabular-nums;
  color: var(--accent);
}
ol.sources li:target { background: var(--accent-soft); box-shadow: 0 0 0 0.35rem var(--accent-soft); }
ol.sources a, .src-title { overflow-wrap: anywhere; }
.src-meta {
  font-family: var(--ui);
  font-size: 0.8rem;
  color: var(--ink-faint);
  white-space: nowrap;
}
.src-host { color: var(--ink-soft); }
.src-meta time { font-variant-numeric: tabular-nums; }
blockquote.src-excerpt {
  margin: 0.3rem 0 0;
  padding: 0.15rem 0 0.15rem 0.75rem;
  border-left: 3px solid var(--rule);
  border-radius: 0;
  background: none;
  color: var(--ink-soft);
  font-size: 0.9rem;
  font-style: italic;
}

/* ---------- notices ---------- */
ul.notices { list-style: none; padding: 0; margin: 0.6rem 0; }
ul.notices li {
  display: flex;
  gap: 0.6rem;
  align-items: flex-start;
  background: var(--surface);
  border: 1px solid var(--rule);
  border-left: 4px solid var(--ink-faint);
  border-radius: var(--radius);
  padding: 0.55rem 0.9rem;
  margin: 0.4rem 0;
  font-family: var(--ui);
  font-size: 0.88rem;
  color: var(--ink-soft);
}
ul.notices li::before {
  content: "i";
  flex: none;
  display: grid;
  place-items: center;
  width: 1.15rem;
  height: 1.15rem;
  margin-top: 0.12rem;
  border-radius: 50%;
  background: var(--ink-faint);
  color: var(--surface);
  font-size: 0.72rem;
  font-weight: 700;
}
ul.notices li.notice--info { border-left-color: var(--accent); background: var(--accent-soft); }
ul.notices li.notice--info::before { background: var(--accent); }
ul.notices li.notice--warn { border-left-color: var(--warn); background: var(--warn-soft); }
ul.notices li.notice--warn::before { content: "!"; background: var(--warn); }
ul.notices li.notice--danger { border-left-color: var(--danger); background: var(--danger-soft); }
ul.notices li.notice--danger::before { content: "!"; background: var(--danger); }
.notice-kind { color: var(--ink); }

/* ---------- narrow screens ---------- */
@media (max-width: 34rem) {
  body { padding: 1.75rem 0.9rem 3rem; font-size: 1rem; }
  h2 { margin-top: 1.75rem; }
  .overview { padding: 0.85rem 1rem; }
  .src-meta { white-space: normal; }
}

@media (prefers-reduced-motion: reduce) {
  html { scroll-behavior: auto; }
  * { transition: none !important; }
}

/* ---------- print ---------- */
@media print {
  :root {
    --bg: #ffffff;
    --surface: #ffffff;
    --surface-alt: #f4f2ed;
    --ink: #111111;
    --ink-soft: #3a3a3a;
    --ink-faint: #5a5a5a;
    --rule: #cccccc;
    --rule-strong: #999999;
    --accent: #0b4a8f;
    --accent-soft: #eef3fb;
    --shadow: none;
  }
  body { padding: 0; font-size: 11pt; }
  body::before { display: none; }
  .brief { max-width: none; }
  .table-wrap { overflow: visible; }
  ol.sources a[href^="http"]::after {
    content: " (" attr(href) ")";
    font-size: 0.8em;
    color: var(--ink-faint);
    word-break: break-all;
  }
  h1, h2, h3 { break-after: avoid; }
  pre, blockquote, .table-wrap, ol.sources li, ul.notices li { break-inside: avoid; }
}
</style>
</head>
<body>
<main class="brief">
<h1>Cheapest Sony WH-1000XM5 today</h1>
<section class="overview"><p>Lowest price is <strong>$328</strong> at Amazon (down from a $399 list price). All three tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this week. <sup class="cite"><a href="#src-1">1</a></sup><sup class="cite"><a href="#src-3">3</a></sup></p></section>
<h2>Key Findings</h2>
<ul class="key-findings">
<li>Amazon — $328, in stock, free shipping <sup class="cite"><a href="#src-1">1</a></sup>
<ul class="children">
<li>Amazon also shows the steepest list-price discount among tracked retailers<sup class="cite"><a href="#src-1">1</a></sup></li>
</ul></li>
<li>Best Buy — $349, in stock <sup class="cite"><a href="#src-2">2</a></sup></li>
<li>Walmart — $342 via a third-party seller <sup class="cite"><a href="#src-3">3</a></sup></li>
<li>Prices have trended upward since last week, so buying now is reasonable. <em class="editorial">editorial</em></li>
</ul>
<section><h2>Price &amp; availability</h2>
<p>All three major retailers currently stock the WH-1000XM5. Amazon has the lowest sticker at $328, down from a $399 list price, followed by Walmart at $342 and Best Buy at $349. <sup class="cite"><a href="#src-1">1</a></sup><sup class="cite"><a href="#src-2">2</a></sup><sup class="cite"><a href="#src-3">3</a></sup></p></section>
<section><h2>Caveats</h2>
<p>The Walmart listing is fulfilled by a third-party seller, so warranty terms differ from a first-party sale. <sup class="cite"><a href="#src-3">3</a></sup></p></section>
<h2>Comparison</h2>
<div class="table-wrap">
<table class="comparison">
<thead><tr><th>Retailer</th><th>Price</th><th>In stock</th></tr></thead>
<tbody>
<tr><td>Amazon</td><td>$328</td><td><span class="yes">✓</span></td></tr>
<tr><td>Best Buy</td><td>$349</td><td><span class="yes">✓</span></td></tr>
<tr><td>Walmart</td><td>$342</td><td><span class="yes">✓</span></td></tr>
</tbody>
</table>
</div>
<h2>Sources</h2>
<ol class="sources">
<li id="src-1"><a href="https://www.amazon.com/sony-wh-1000xm5" rel="noopener noreferrer">Sony WH-1000XM5 Wireless Headphones — Amazon</a> <span class="src-meta"><span class="src-host">amazon.com</span> · fetched <time datetime="2026-07-01T09:00:00.000Z">2026-07-01</time> · published <time datetime="2026-06-28T00:00:00.000Z">2026-06-28</time></span>
<blockquote class="src-excerpt">Industry-leading noise cancellation with two processors and eight microphones. List price $399, current price $328.</blockquote></li>
<li id="src-2"><a href="https://www.bestbuy.com/sony-wh-1000xm5" rel="noopener noreferrer">Sony WH-1000XM5 | Best Buy</a> <span class="src-meta"><span class="src-host">bestbuy.com</span> · fetched <time datetime="2026-07-01T09:00:05.000Z">2026-07-01</time></span></li>
<li id="src-3"><a href="https://www.walmart.com/ip/sony-wh-1000xm5" rel="noopener noreferrer">Sony WH-1000XM5 Headphones - Walmart</a> <span class="src-meta"><span class="src-host">walmart.com</span> · fetched <time datetime="2026-07-01T09:00:10.000Z">2026-07-01</time></span></li>
</ol>
<h2>Notices</h2>
<ul class="notices">
<li class="notice--warn"><span><strong class="notice-kind">fetch failed</strong> — example-blog.com: fetch timed out after 8000ms</span></li>
</ul>
</main>
</body>
</html>
"
`;

exports[`@no-llm brief render surfaces (drift detection) > brief.md artifact 1`] = `
"# Cheapest Sony WH-1000XM5 today

> Lowest price is **$328** at Amazon (down from a $399 list price). All three tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this week. [1][3]

## Key Findings

- Amazon — $328, in stock, free shipping [1]
  - Amazon also shows the steepest list-price discount among tracked retailers [1]
- Best Buy — $349, in stock [2]
- Walmart — $342 via a third-party seller [3]
- Prices have trended upward since last week, so buying now is reasonable. *(editorial)*

## Price & availability

All three major retailers currently stock the WH-1000XM5. Amazon has the lowest sticker at $328, down from a $399 list price, followed by Walmart at $342 and Best Buy at $349. [1][2][3]

## Caveats

The Walmart listing is fulfilled by a third-party seller, so warranty terms differ from a first-party sale. [3]

## Comparison

| Retailer | Price | In stock |
| --- | --- | --- |
| Amazon | $328 | ✓ |
| Best Buy | $349 | ✓ |
| Walmart | $342 | ✓ |

## Sources

1. [Sony WH-1000XM5 Wireless Headphones — Amazon](https://www.amazon.com/sony-wh-1000xm5) — amazon.com · fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z
   > Industry-leading noise cancellation with two processors and eight microphones. List price $399, current price $328.
2. [Sony WH-1000XM5 | Best Buy](https://www.bestbuy.com/sony-wh-1000xm5) — bestbuy.com · fetched 2026-07-01T09:00:05.000Z
3. [Sony WH-1000XM5 Headphones - Walmart](https://www.walmart.com/ip/sony-wh-1000xm5) — walmart.com · fetched 2026-07-01T09:00:10.000Z

## Notices

- **fetch_failed** — example-blog.com: fetch timed out after 8000ms"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=full noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mKey Findings[22m
[32m•[39m Amazon — $328, in stock, free shipping [36m[1][39m
  [2m◦[22m [2mAmazon also shows the steepest list-price discount among tracked retailers [36m[1][39m[22m
[32m•[39m Best Buy — $349, in stock [36m[2][39m
[32m•[39m Walmart — $342 via a third-party seller [36m[3][39m
[33m◦[39m Prices have trended upward since last week, so buying now is reasonable.[2m (editorial)[22m

[1mComparison[22m
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│[36m Retailer                 [39m│[36m Price                   [39m│[36m In stock                [39m│
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

[1mPrice & availability[22m
All three major retailers currently stock the WH-1000XM5. Amazon has the lowest
sticker at $328, down from a $399 list price, followed by Walmart at $342 and
Best Buy at $349. [1][2][3]

[1mCaveats[22m
The Walmart listing is fulfilled by a third-party seller, so warranty terms
differ from a first-party sale. [3]

[1mNotices[22m
[33m⚠ example-blog.com: fetch timed out after 8000ms[39m

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[2m    https://www.amazon.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[2m    https://www.bestbuy.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:05.000Z[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m
[2m    https://www.walmart.com/ip/sony-wh-1000xm5  fetched 2026-07-01T09:00:10.000Z[22m"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=full noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Key Findings
• Amazon — $328, in stock, free shipping [1]
  ◦ Amazon also shows the steepest list-price discount among tracked retailers [1]
• Best Buy — $349, in stock [2]
• Walmart — $342 via a third-party seller [3]
◦ Prices have trended upward since last week, so buying now is reasonable. (editorial)

Comparison
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│ Retailer                 │ Price                   │ In stock                │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

Price & availability
All three major retailers currently stock the WH-1000XM5. Amazon has the lowest
sticker at $328, down from a $399 list price, followed by Walmart at $342 and
Best Buy at $349. [1][2][3]

Caveats
The Walmart listing is fulfilled by a third-party seller, so warranty terms
differ from a first-party sale. [3]

Notices
⚠ example-blog.com: fetch timed out after 8000ms

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
    https://www.amazon.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:00.000Z · published 2026-06-28T00:00:00.000Z
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
    https://www.bestbuy.com/sony-wh-1000xm5  fetched 2026-07-01T09:00:05.000Z
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com
    https://www.walmart.com/ip/sony-wh-1000xm5  fetched 2026-07-01T09:00:10.000Z"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=overview noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=overview noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=standard noColor=false 1`] = `
"[1mCheapest Sony WH-1000XM5 today[22m
╭──────────────────────────────────────────────────────────────────────────────╮
│ Lowest price is [1m$328[22m at Amazon (down from a $399 list price). All three      │
│ tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this │
│ week. [36m[1][39m[36m[3][39m                                                                 │
╰──────────────────────────────────────────────────────────────────────────────╯

[1mKey Findings[22m
[32m•[39m Amazon — $328, in stock, free shipping [36m[1][39m
  [2m◦[22m [2mAmazon also shows the steepest list-price discount among tracked retailers [36m[1][39m[22m
[32m•[39m Best Buy — $349, in stock [36m[2][39m
[32m•[39m Walmart — $342 via a third-party seller [36m[3][39m
[33m◦[39m Prices have trended upward since last week, so buying now is reasonable.[2m (editorial)[22m

[1mComparison[22m
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│[36m Retailer                 [39m│[36m Price                   [39m│[36m In stock                [39m│
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

[1mNotices[22m
[33m⚠ example-blog.com: fetch timed out after 8000ms[39m

[1mSources[22m
[36m[1][39m Sony WH-1000XM5 Wireless Headphones — Amazon [2m— amazon.com[22m
[36m[2][39m Sony WH-1000XM5 | Best Buy [2m— bestbuy.com[22m
[36m[3][39m Sony WH-1000XM5 Headphones - Walmart [2m— walmart.com[22m"
`;

exports[`@no-llm brief render surfaces (drift detection) > terminal — detail=standard noColor=true 1`] = `
"Cheapest Sony WH-1000XM5 today
 Lowest price is $328 at Amazon (down from a $399 list price). All three        
 tracked retailers list the WH-1000XM5, and prices have risen roughly 4% this   
 week. [1][3]                                                                   

Key Findings
• Amazon — $328, in stock, free shipping [1]
  ◦ Amazon also shows the steepest list-price discount among tracked retailers [1]
• Best Buy — $349, in stock [2]
• Walmart — $342 via a third-party seller [3]
◦ Prices have trended upward since last week, so buying now is reasonable. (editorial)

Comparison
┌──────────────────────────┬─────────────────────────┬─────────────────────────┐
│ Retailer                 │ Price                   │ In stock                │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Amazon                   │ $328                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Best Buy                 │ $349                    │ ✓                       │
├──────────────────────────┼─────────────────────────┼─────────────────────────┤
│ Walmart                  │ $342                    │ ✓                       │
└──────────────────────────┴─────────────────────────┴─────────────────────────┘

Notices
⚠ example-blog.com: fetch timed out after 8000ms

Sources
[1] Sony WH-1000XM5 Wireless Headphones — Amazon — amazon.com
[2] Sony WH-1000XM5 | Best Buy — bestbuy.com
[3] Sony WH-1000XM5 Headphones - Walmart — walmart.com"
`;
